# disks-rs

./: .gitignore  Cargo.toml
.github/workflows/: ci.yaml
crates/disks/: Cargo.toml
crates/disks/src/: disk.rs  lib.rs  mock.rs  sizing.rs
crates/disktester/: Cargo.toml
crates/disktester/src/: main.rs
crates/partitioning/: Cargo.toml
crates/partitioning/src/: attributes.rs  blkpg.rs  formatter.rs  lib.rs  loopback.rs  planner.rs  sparsefile.rs  strategy.rs  writer.rs
crates/provisioning/: Cargo.toml
crates/provisioning/src/: commands.rs  lib.rs  provisioner.rs  types.rs
crates/provisioning/src/commands/: create_partition.rs
crates/provisioning/src/types/: constraints.rs  filesystem.rs  partition_type.rs
crates/provisioning/tests/: use_whole_disk.kdl
crates/superblock/: Cargo.toml
crates/superblock/src/: btrfs.rs  ext4.rs  f2fs.rs  fat.rs  lib.rs  luks2.rs  xfs.rs
crates/superblock/src/luks2/: config.rs  superblock.rs
crates/types/: Cargo.toml
crates/types/src/: constraints.rs  errors.rs  filesystem.rs  kdl_helpers.rs  lib.rs  partition_role.rs  partition_table.rs  partition_type.rs  units.rs
