[package]
name = "provisioning"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
miette = { workspace = true, features = ["fancy"] }

[dependencies]
disks = { path = "../disks" }
partitioning = { path = "../partitioning" }
types = { path = "../types" }
kdl = { workspace = true, features = ["span"] }
miette = { workspace = true }
itertools = { workspace = true }
phf = { workspace = true, features = ["macros"] }
test-log.workspace = true
thiserror.workspace = true
log.workspace = true
uuid.workspace = true
